# dash-bootstrap-components

./: .babelrc  .gitignore  .prettierrc  .travis.yml  DESCRIPTION  Gruntfile.js  LICENSE  LICENSE.txt  MANIFEST.in  NAMESPACE  NOTICE.txt  Procfile  Project.toml  README.md  app.jl  app.py  eslint.config.mjs  gulpfile.js  how-to-release.md  index.html.tpl  jest.config.js  justfile  landing-page.md  markdown_to_html.py  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  server.py  setup.cfg  setup.py  tasks.py  usage.py  usage_carousel.py  watch-markdown.sh  webpack.config.demo.js  webpack.config.dist.js  (+1 more)
.github/: CONTRIBUTING.md
R/: dbcAccordion.R  dbcAccordionItem.R  dbcAlert.R  dbcBadge.R  dbcBreadcrumb.R  dbcButton.R  dbcButtonGroup.R  dbcCard.R  dbcCardBody.R  dbcCardColumns.R  dbcCardDeck.R  dbcCardFooter.R  dbcCardGroup.R  dbcCardHeader.R  dbcCardImg.R  dbcCardImgOverlay.R  dbcCardLink.R  dbcCarousel.R  dbcCheckbox.R  dbcChecklist.R  dbcCol.R  dbcCollapse.R  dbcContainer.R  dbcDropdownMenu.R  dbcDropdownMenuItem.R  dbcFade.R  dbcForm.R  dbcFormFeedback.R  dbcFormFloating.R  dbcFormGroup.R  dbcFormText.R  dbcInput.R  dbcInputGroup.R  dbcInputGroupAddon.R  dbcInputGroupText.R  dbcJumbotron.R  dbcLabel.R  dbcListGroup.R  dbcListGroupItem.R  dbcListGroupItemHeading.R  (+37 more)
R_examples/: format_table_numbers.R
assets/: docs.css
components/: __init__.py  badges.py  collapse.py  helpers.py  page.py
components_page/: __init__.py  badges_content.py  buttons_content.py  cards_content.py  cards_page.py  collapse_content.py  dropdown_content.py  fade_content.py  forms_content.py  helpers.py  input_group_content.py  jumbotron_content.py  layout_content.py  list_group_content.py  listgroup_content.py  markdown_parser.py  metadata.py  page.py  progress_content.py  register_apps.py  table_content.py  tabs_content.py  tooltip_content.py
content/: changelog.md  migration-guide.md
dash_bootstrap_components/: __init__.py  _table.py  _version.py  icons.py  react-dates-shim.css  table.py  themes.py
dbc_docs_components/: .babelrc  MANIFEST.in  package-lock.json  package.json
demo/: Demo.js  app.py  index.html  index.js
demos/: __init__.py  demo_layout.py  theme_explorer.py
docs/: Procfile  app.py  how-to-release.md  index.html.tpl  markdown_to_html.py  requirements.txt  run.py  server.py  wsgi.py
docs-frontend/: gatsby-browser.js  gatsby-node.js  package.json
examples/: README.md  __init__.py  app.py  carousel.py  checklist.py  col.py  components.py  date_picker.py  dropdown.py  dropdownmenu.py  form.py  input.py  navitem_test.py  tabs.py  textarea.py
jl/: icons.jl  themes.jl
man/: dbcAccordion.Rd  dbcAccordionItem.Rd  dbcAlert.Rd  dbcBadge.Rd  dbcBreadcrumb.Rd  dbcButton.Rd  dbcButtonGroup.Rd  dbcCard.Rd  dbcCardBody.Rd  dbcCardColumns.Rd  dbcCardDeck.Rd  dbcCardFooter.Rd  dbcCardGroup.Rd  dbcCardHeader.Rd  dbcCardImg.Rd  dbcCardImgOverlay.Rd  dbcCardLink.Rd  dbcCarousel.Rd  dbcCheckbox.Rd  dbcChecklist.Rd  dbcCol.Rd  dbcCollapse.Rd  dbcContainer.Rd  dbcDropdownMenu.Rd  dbcDropdownMenuItem.Rd  dbcFade.Rd  dbcForm.Rd  dbcFormFeedback.Rd  dbcFormFloating.Rd  dbcFormGroup.Rd  dbcFormText.Rd  dbcInput.Rd  dbcInputGroup.Rd  dbcInputGroupAddon.Rd  dbcInputGroupText.Rd  dbcJumbotron.Rd  dbcLabel.Rd  dbcListGroup.Rd  dbcListGroupItem.Rd  dbcListGroupItemHeading.Rd  (+31 more)
src/: DashBootstrapComponents.jl  dbc_alert.jl  dbc_badge.jl  dbc_button.jl  dbc_buttongroup.jl  dbc_card.jl  dbc_cardbody.jl  dbc_cardcolumns.jl  dbc_carddeck.jl  dbc_cardfooter.jl  dbc_cardgroup.jl  dbc_cardheader.jl  dbc_cardimg.jl  dbc_cardimgoverlay.jl  dbc_cardlink.jl  dbc_checkbox.jl  dbc_checklist.jl  dbc_col.jl  dbc_collapse.jl  dbc_container.jl  dbc_dropdownmenu.jl  dbc_dropdownmenuitem.jl  dbc_fade.jl  dbc_form.jl  dbc_formfeedback.jl  dbc_formgroup.jl  dbc_formtext.jl  dbc_input.jl  dbc_inputgroup.jl  dbc_inputgroupaddon.jl  dbc_inputgrouptext.jl  dbc_jumbotron.jl  dbc_label.jl  dbc_listgroup.jl  dbc_listgroupitem.jl  dbc_listgroupitemheading.jl  dbc_listgroupitemtext.jl  dbc_modal.jl  dbc_modalbody.jl  dbc_modalfooter.jl  (+26 more)
static/: data_file.txt  docs.css  loading.css
templates/: changelog.html  docs.html  examples-index.html  index.html  test.html  theme-explorer.html
tests/: test_alert.py  test_components_as_props  test_navlink.py  (+6 more)
(+1634 files in other folders)
